# DEXWORLD

./: .gitignore  .npmrc  README.md  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  start.sh
.idx/: dev.nix
dexworld-admin/: .gitignore  README.md  flake.nix  package.json
dexworld-admin/src/: main.tsx
dexworld-admin/src-tauri/src/: lib.rs
dexworld-admin/src/router/: index.tsx
src/: App.tsx  Home.tsx  index.scss  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Seo.tsx
src/layouts/pages/person/common/search/: index.tsx
src/pages/: DashboardPage.tsx
src/styles/: _custom.scss
src/styles/scss/: material-dashboard.scss
src/styles/scss/material-dashboard/: theme-pro.scss  theme.scss
