[package]
name = "dexworld-admin"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.0.0-rc.11", features = [] }

[dependencies]
tauri = { version = "=2.0.0-rc.11", features = [] }
tauri-plugin-http = "=2.0.0-rc.11"
tauri-plugin-shell = "=2.0.0-rc.11"
tauri-plugin-stronghold = { version = "=2.0.0-rc.11", features = ["sqlite"] } # Usamos a feature sqlite para persistência
tauri-plugin-window = "=2.0.0-rc.11"
tauri-plugin-opener = "=2.0.0-rc.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]